cluster/platform/fleet/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: fleet
    app.kubernetes.io/version: 78ede77
  name: fleet
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fleet
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config: 4c9e79c8f05241d3
      labels:
        app.kubernetes.io/name: fleet
        app.kubernetes.io/version: 78ede77
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/fleet:78ede77@sha256:8c8ffa33e9dffb5095cb1ac2daa9baf89cec56eaff233be74e8b64f1799ce3e1
        name: fleet
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /var/lib/fleet
          name: fleet-data-pvc
        - mountPath: /tmp
          name: tmp
        resources:
          requests:
            cpu: 25m
            memory: 96Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      - args:
        - -c
        - /etc/salt
        - -l
        - info
        image: code.netbird.nathalie-stiefsohn.eu/my-homelab/salt-master:1001d96@sha256:8b24f4146b6467f79048cf77dac39f0751156b377904ebb3e560f376bd037c1e
        name: salt-master
        ports:
        - containerPort: 4505
          name: salt-publish
        - containerPort: 4506
          name: salt-return
        volumeMounts:
        - mountPath: /etc/salt
          name: fleet-salt-config
          readOnly: true
        - mountPath: /var/lib/fleet
          name: fleet-data-pvc
        - mountPath: /run/salt
          name: salt-run
        - mountPath: /run/salt-auth
          name: salt-auth
          readOnly: true
        - mountPath: /tmp
          name: tmp
        - mountPath: /srv/salt/states
          name: fleet-salt-states
          readOnly: true
        - mountPath: /srv/salt/pillar
          name: fleet-salt-pillar
          readOnly: true
        resources:
          requests:
            cpu: 50m
            memory: 320Mi
          limits:
            cpu: 1000m
            memory: 768Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      - args:
        - -c
        - /etc/salt
        - -l
        - info
        command:
        - salt-api
        image: code.netbird.nathalie-stiefsohn.eu/my-homelab/salt-master:1001d96@sha256:8b24f4146b6467f79048cf77dac39f0751156b377904ebb3e560f376bd037c1e
        name: salt-api
        volumeMounts:
        - mountPath: /etc/salt
          name: fleet-salt-config
          readOnly: true
        - mountPath: /var/lib/fleet
          name: fleet-data-pvc
        - mountPath: /run/salt
          name: salt-run
        - mountPath: /run/salt-auth
          name: salt-auth
          readOnly: true
        - mountPath: /tmp
          name: tmp
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      volumes:
      - name: fleet-data-pvc
        persistentVolumeClaim:
          claimName: fleet-data-pvc
      - name: fleet-salt-config
        configMap:
          name: fleet-salt-config
      - name: fleet-salt-states
        configMap:
          name: fleet-salt-states
          items:
          - key: netbird.sls
            path: netbird.sls
      - name: fleet-salt-pillar
        configMap:
          name: fleet-salt-pillar
          items:
          - key: netbird.sls
            path: netbird.sls
          - key: top.sls
            path: top.sls
      - name: salt-run
        emptyDir: {}
      - name: salt-auth
        emptyDir:
          medium: Memory
      - name: tmp
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
