cluster/platform/fleet/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: fleet
    app.kubernetes.io/version: 6145d9a
  name: fleet
spec:
  selector:
    app.kubernetes.io/name: fleet
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: salt-publish
    port: 4505
    targetPort: 4505
    protocol: TCP
  - name: salt-return
    port: 4506
    targetPort: 4506
    protocol: TCP
